test/errors/add-string-number.ksu
; ERROR: Program exited with 1: + expects two integers; got STRING and NUMBER\nRuntime error: + expects two integers
(print (+ "hello" 42))
